--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "gatsby-remark-highlight-code": "^3.1.0"
   }
 }
